--- a/Day-2/index.html
+++ b/Day-2/index.html
@@ -11,12 +11,54 @@
              <h1>Master of Science in Information Technology</h1>
         </header>
         <nav>
-            <ul>
-                <li>Overview</li>
-                <li>Curriculum</li>
-                <li>Admission Requirements</li>
-                <li>Contact us</li>
-            </ul>
+            <ul class="ul1">
+                <li class="li1">Overview</li>
+                <li class="li1">Curriculum</li>
+                <li class="li1">Admission Requirements</li>
+                <li class="li1">Contact us</li>
+            </ul class="ul1">
         </nav>
     </body>
+</html>
+
+<section class="program-overview">
+    <h2>Program Overview</h2>
+    <p>The MSIT program is designed to equip students with the skills and knowledge needed to excel in the field of information technology. Our curriculum is tailored to meet the needs of both beginners and experienced professionals.</p>
+    
+    <img src="image.png" alt="Description" style="display: block; margin: auto;">
+</section>
+
+<section class="curriculum">
+    <h2>Curriculum</h2>
+    <ul>
+        <li>Data Structures and Algorithms</li>
+        <li>Database Management Systems</li>
+        <li>Web Development</li>
+        <li>Cloud Computing</li>
+        <li>Cybersecurity</li>
+    </ul>
+</section>
+
+<section class="admission-requirements">
+    <h2>Admission Requirements</h2>
+    <ul>
+        <li>A bachelor's degree in a related field</li>
+        <li>Official transcripts</li>
+        <li>Resume/CV</li>
+        <li>Statement of purpose</li>
+        <li>Two letters of recommendation</li>
+    </ul>
+</section>
+
+<section class="contact-us">
+    <h2>Contact Us</h2>
+    <p>If you have any questions, feel free to reach out to us:</p>
+    <p>Email: <a href="mailto:msit@university.edu">msit@university.edu</a><br>
+    Phone: (123) 456-7890</p>
+</section>
+
+<footer>
+    <p>&copy; 2024 University Name. All rights reserved.</p>
+</footer>
+</body>
 </html>
