--- a/Day-2/index.html
+++ b/Day-2/index.html
@@ -5,9 +5,12 @@
         <link rel="stylesheet" href="styles.css"> <!-- Link to the external CSS stylesheet -->
     </head>
     <body>
-        <header>
-            <img src="msitlogo.png" alt="MSIT Logo"> <!-- Logo image for the header -->
-            <h1>Master of Science in Information Technology</h1> <!-- Main heading for the page -->
+        <header class="hero">
+            <div class="hero-content">
+                <h1>Welcome to the MSIT Program</h1>
+                <p>Your journey to mastering information technology starts here</p>
+                <button class="btn-primary">Learn More</button>
+            </div>
         </header>
         
         <nav>
