--- a/Day-2/index.html
+++ b/Day-2/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -50,6 +51,14 @@
                 </div>
             </div>
         </section>
+        <section id="video">
+            <h2>MSIT Program Video</h2>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/O1IT6skIS30?start=146" 
+            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
+            <p>This video gives an overview of the MSIT program and its key offerings.</p>
+        </section>
+        
     <section id="curriculum">
       <h2>Curriculum</h2>
     <section class="curriculum-section">
@@ -97,8 +106,16 @@
          <p>Phone: (123) 456-7890</p>
      </section>
  </div>
-    <footer>
+ <footer>
+    <div class="social-icons">
+        
+        <a href="https://www.facebook.com/IIITH/"target="_blank" class="fa-brands fa-facebook"></a>
+        <a href="https://x.com/iiit_hyderabad/status/1796831442733044149" target="_blank" class="fa-brands fa-twitter"></a>
+        <a href="https://in.linkedin.com/school/iiithofficial/?trk=public_profile_topcard-current-company" target="_blank" class="fa-brands fa-linkedin"></a>
+        <a href="https://www.instagram.com/msit_official/p/C4z_xRBLBX8/" target="_blank" class="fa-brands fa-instagram"></a>
         <p>&copy; 2024 University Name. All Rights Reserved</p>
-    </footer>
+    </div>
+</footer>
+
 </body>
 </html>
