--- a/Day-2/index.html
+++ b/Day-2/index.html
@@ -15,6 +15,7 @@
             <h1>Welcome to the MSIT Program</h1>
             <p>Your journey to mastering information technology starts here.</p>
             <a href="#" class="btn">Learn More</a>
+            <a href="apply.html" class="btn">Apply Now</a>
         </div>
     </section>
     <nav>
